# image_analysis

./: .gitignore  README.md
edge_detector/: CMakeLists.txt  TP2 - détection de contours  TP2 - notes.txt  main.cpp
edge_detector/Report pics/: base
region_growing/: CMakeCache.txt  CMakeLists.txt  Makefile  Region growing.pptx  cmake_install.cmake  main.cpp  region_growing
